--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,13 +219,36 @@ header .submenu.show {
   gap: 1rem;
 }
 
+.login {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.dashboard .btn {
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+
+.register {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .form {
   display: flex;
   flex-direction: column;
   align-items: left;
   justify-content: space-between;
   gap: 1rem;
-  max-width: 30rem;
+  max-width: 40rem;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
   border-radius: 10px;
@@ -253,7 +276,7 @@ header .submenu.show {
 
 .second-form {
   gap: 0.2rem;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 .btn {
@@ -267,6 +290,7 @@ header .submenu.show {
   font-size: 1rem;
   font-weight: 600;
   cursor: pointer;
+  text-transform: lowercase;
   transition: background-color 0.3s ease;
 }
 .btn:hover {
@@ -279,7 +303,7 @@ header .submenu.show {
 .btn-secondary {
   display: inline-block;
   padding: 0.8rem 1.6rem;
-  border: none;
+  border: 1px solid #999;
   text-align: center;
   border-radius: 0.5rem;
   background-color: #f5f5f5;
@@ -287,12 +311,76 @@ header .submenu.show {
   font-size: 1rem;
   font-weight: 600;
   cursor: pointer;
+  text-transform: lowercase;
   transition: background-color 0.3s ease;
 }
 .btn-secondary:hover {
   background-color: rgb(219.5, 219.5, 219.5);
 }
 .btn-secondary:active {
+  transform: scale(0.98);
+}
+
+.tabla {
+  border: 1px solid #999;
+  padding: 2rem;
+  margin: 0 auto;
+  border-radius: 10px;
+  border-collapse: collapse;
+  width: 100%;
+}
+.tabla td, .tabla th {
+  padding: 1.5rem;
+  border-bottom: 1px solid #999;
+}
+.tabla .titulo {
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+.tabla .fila {
+  font-size: 1.3rem;
+}
+.tabla .btn-eliminar {
+  display: inline-block;
+  padding: 0.8rem 1.6rem;
+  border: none;
+  text-align: center;
+  border-radius: 0.5rem;
+  background-color: rgb(124, 0, 0);
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease;
+}
+.tabla .btn-eliminar:hover {
+  background-color: #490000;
+}
+.tabla .btn-eliminar:active {
+  transform: scale(0.98);
+}
+.tabla .btn-eliminar {
+  margin-right: 1rem;
+}
+.tabla .btn-editar {
+  display: inline-block;
+  padding: 0.8rem 1.6rem;
+  border: none;
+  text-align: center;
+  border-radius: 0.5rem;
+  background-color: rgb(0, 110, 0);
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease;
+}
+.tabla .btn-editar:hover {
+  background-color: #003b00;
+}
+.tabla .btn-editar:active {
   transform: scale(0.98);
 }
 
