--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -1,13 +1,15 @@
 @use '../utils/variables' as *;
 @use '../utils/mixins' as *;
 
+
 .form {
   display: flex;
   flex-direction: column;
   align-items: left;
   justify-content: space-between;
   gap: 1rem;
-  max-width: 30rem;
+  max-width: 40rem;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
   border-radius: 10px;
@@ -39,5 +41,5 @@
 
 .second-form {
   gap: .2rem;
-  font-size: 1rem;
+  font-size: .8rem;
 }
