--- a/assets/scss/pages/_register.scss
+++ b/assets/scss/pages/_register.scss
@@ -1,9 +1,8 @@
 @use '../utils/mixins' as *;
 @use '../utils/variables' as *;
 
-.login {
-  width: 100%;
-  height: 100vh;
+.register {
+    width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
